# Unihacks-2023-Healthcare-

./: .gitignore  Cargo.toml  Gemfile  README.md  _config.yml
api/src/: db.rs  main.rs  setup_db.rs
frontend/_includes/: blog-layout.html  desc.html  github.html  head.html  navigation.html  schedule-appointment.html  titlebar.html
frontend/_layouts/: default.html  post.html  project.html
frontend/_sass/: main.scss
frontend/_sass/components/: cards.scss  text-field.scss
frontend/_sass/components/buttons/: common.scss
frontend/_sass/custom/: mailbox.scss  navigation.scss  titlebar.scss
frontend/_sass/layouts/: large.scss
frontend/assets/: post.scss  pygments.scss
frontend/pages/: care_team.html  checkup-times.html  checkup.html  doctors.html  index.html  messages.html  resources.html  schedule.html
frontend/pages/schedule-appointment/: cardiology.html  ent.html  neurology.html  nutrition.html  oncology.html  orthopedics.html  reproductive.html  surgery.html
