[package]
name = "Unihacks-2023-Healthcare-"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
postcard = {version = "1.0.4", features = ["alloc"]}
rocket = {version = "0.5.0-rc.2", features = ["json", "uuid"]}
serde = "1.0.152"
time = { version = "0.3.19", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[[bin]]
name = "api"
path = "api/src/main.rs"
